.k8s/6-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sgc-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sgc
  template:
    metadata:
      labels:
        app: sgc
    spec:
      volumes:
      - name: env-file
        hostPath:
          path: /home/sgc/sgc_env/.env
          type: FileOrCreate
      - name: sessions-dir
        persistentVolumeClaim:
          claimName: sgc-sessions-pvc
      - name: logs-dir
        persistentVolumeClaim:
          claimName: sgc-logs-pvc
      containers:
        - name: sgc
          image: seadufes/sgc:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: env-file
              mountPath: /www/.env
            - name: sessions-dir
              mountPath: /www/storage/framework/sessions
            - name: logs-dir
              mountPath: /www/storage/logs
