.k8s/7-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sgc-service
spec:
  ports:
    - name: http-svc
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: sgc
  externalIPs:
    - <external_ip>
